--- a/app.json
+++ b/app.json
@@ -11,9 +11,9 @@
         ],
         "version": "1.0.0",
         "orientation": "portrait",
-        "icon": "./assets/images/icon.png",
+        "icon": "./assets/images/semi-logo.png",
         "splash": {
-            "image": "./assets/images/splash_haravan.png",
+            "image": "./assets/images/semi-logo-with-name.png",
             "resizeMode": "contain",
             "backgroundColor": "#ffffff"
         },
