--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-facebook": "^6.0.0",
     "expo-font": "^6.0.1",
     "expo-web-browser": "6.0.0",
+    "firebase": "^7.1.0",
     "native-base": "^2.13.8",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
